fix(Desktop): Improve usability and legibility of tab close icon

--- a/desktop/src/renderer/components/app-document/app-document-pane/app-document-pane-tab/app-document-pane-tab.css
+++ b/desktop/src/renderer/components/app-document/app-document-pane/app-document-pane-tab/app-document-pane-tab.css
@@ -34,7 +34,13 @@ li {
 }
 
 stencila-icon {
-  @apply opacity-0;
+  @apply opacity-0 rounded-sm;
+
+  &:hover,
+  &:active {
+    color: var(--color-neutral-300);
+    background: var(--color-neutral-700);
+  }
 }
 
 a,
